; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_elf64.c_check_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_elf64.c_check_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"\7FELF\02\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca [5 x i32], align 16
  store i32* %0, i32** %3, align 8
  %5 = bitcast [5 x i32]* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %5, i8 0, i64 20, i1 false)
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @r_buf_size(i32* %6)
  %8 = icmp sgt i32 %7, 4
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [5 x i32], [5 x i32]* %4, i64 0, i64 0
  %12 = call i32 @r_buf_read_at(i32* %10, i32 0, i32* %11, i32 20)
  %13 = getelementptr inbounds [5 x i32], [5 x i32]* %4, i64 0, i64 0
  %14 = call i32 @memcmp(i32* %13, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 5)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %9
  store i32 1, i32* %2, align 4
  br label %19

17:                                               ; preds = %9
  br label %18

18:                                               ; preds = %17, %1
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %16
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @r_buf_size(i32*) #2

declare dso_local i32 @r_buf_read_at(i32*, i32, i32*, i32) #2

declare dso_local i32 @memcmp(i32*, i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
